--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "axios": "^1.13.1",
     "D": "^1.0.0",
     "json-server": "^1.0.0-beta.3",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+    "react-hook-form": "^7.65.0",
+    "styled-components": "^6.1.19",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
