--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "D": "^1.0.0",
     "json-server": "^1.0.0-beta.3",
     "phosphor-react": "^1.4.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
+    "scheduler": "^0.27.0",
     "styled-components": "^6.1.19",
+    "use-context-selector": "^2.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
